# aide

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
aide/: Cargo.toml
aide-common/: Cargo.toml
aide-common/src/: cli.rs  http.rs  lib.rs  tui.rs
aide-proto/: Cargo.toml
aide-proto/src/: lib.rs
aide-proto/src/v1/: kind.rs  mod.rs  todo.rs  weather.rs
aide-proxy/: Cargo.toml
habitica/: Cargo.toml  REAMDE.md
habitica/resources/: tasks.json
habitica/src/: cli.rs  habitica.rs  habitica_aide.rs  main.rs
reqwest-pool/: Cargo.toml
reqwest-pool/src/: lib.rs
todo/: Cargo.toml
todo/src/: cli.rs  main.rs  tui.rs
weather/: Cargo.toml
weather/src/: cli.rs  main.rs
weatherapi/: Cargo.toml
weatherapi/resources/: forecast.json  forecast2.json
weatherapi/src/: cli.rs  main.rs  weatherapi.rs
