[package]
name = "aide-proto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
strum = "0.23.0"
strum_macros = "0.21.1"
url = "2.2.2"
