[package]
name = "habitica"
version = "0.1.0"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tide = "0.16"
surf = "2"
surf-pool = "0.1.2"
async-std = {version = "1.6", features = ["attributes"]}
structopt = "0.3"
structopt-flags = "0.3"
strum = {version = "0.21", features = ["derive"]}
strum_macros = "0.21"
chrono = "0.4.19"
clap = "3.0.0-beta.2"

[dependencies.aide-proto]
version = "=0.1.0"
path = "../aide-proto"
