[package]
name = "habitica"
version = "0.1.0"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = {version = "0.24", features = ["derive"]}
strum_macros = "0.24.0"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.10", features = ["default-tls", "gzip", "brotli", "json" ]}
anyhow = "1.0.56"
env_logger = "0.9.0"
tracing = { version = "0.1", features = ["log"] }
log = "0.4.14"

[dependencies.aide-proto]
path = "../aide-proto"

[dependencies.aide-common]
path = "../aide-common"

[dependencies.reqwest-pool]
path = "../reqwest-pool"
