[package]
name = "todo"
version = "0.1.0"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf = "2"
async-std = {version = "1.6", features = ["attributes"]}
clap = "3.0.0-beta.2"
strum = "0.21"
strum_macros = "0.21"

[dependencies.aide-proto]
path = "../aide-proto"
