[package]
name = "todo"
version = "0.1.0"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.9", features = ["default-tls", "gzip", "brotli", "json" ]}
clap = {version = "3.0.14", features = ["derive"]}
strum = "0.23"
strum_macros = "0.23"
anyhow = "1.0.54"

[dependencies.aide-proto]
path = "../aide-proto"

[dependencies.aide-common]
path = "../aide-common"
