[package]
name = "todo"
version = "0.1.0"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.10", features = ["default-tls", "gzip", "brotli", "json", "blocking" ]}
clap = {version = "3.1.9", features = ["derive"]}
strum = "0.24"
strum_macros = "0.24"
anyhow = "1.0.56"
tui = "0.17"
crossterm = "0.22.1"

[dependencies.aide-proto]
path = "../aide-proto"

[dependencies.aide-common]
path = "../aide-common"
