[package]
name = "weather"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.10", features = ["default-tls", "gzip", "brotli", "json", "blocking" ]}
clap = { version = "3.1.12", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
anyhow = "1.0.56"

[dependencies.aide-proto]
path = "../aide-proto"

[dependencies.aide-common]
path = "../aide-common"
