[package]
name = "weatherapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive", "env"] }
serde = { version="1.0.134", features = ["derive"] }
serde_json = "1.0.75"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.9", features = ["default-tls", "gzip", "brotli", "json" ] }
anyhow = "1.0.53"
env_logger = "0.9.0"
tracing = { version = "0.1.29", features = ["log"] }

[dependencies.aide-proto]
path = "../aide-proto"

[dependencies.aide-common]
path = "../aide-common"

[dependencies.reqwest-pool]
path = "../reqwest-pool"
